Add unit tests for authentication service